# psql_tester

./: Cargo.toml  LICENSE.md  README.md  psql_copy_bugfix.patch
src/: main.rs
tests/: common.rs  mod.rs
tests/command_file/: binary.rs  csv.rs  text.rs
tests/script_stdin/: binary.rs  csv.rs  mod.rs  text.rs
tests/terminal_stdin/: binary.rs  csv.rs  mod.rs  text.rs
tests/terminal_tty/: binary.rs  csv.rs  text.rs
