[package]
name = "psql_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
expectrl = "0.7"
tempfile = "3.14"
similar = { version = "2.6", features = ["inline"] }
termcolor = "1.4"
once_cell = "1.17.1"
uuid = { version = "1.11", features = ["v4"] }

[[test]]
name = "integration"
path = "tests/mod.rs"
